# price_parser

./: README.md  app.py  pyproject.toml  urls
src/: utils.py
src/parsers/: DefactoParser.py  Parser.py  TrendyolParser.py  __init__.py
tests/: defacto_product  test_defacto.py  test_trendyol.py  trendyol_product
