[tool.poetry]
name = "price_parser"
version = "0.1.0"
description = ""
authors = ["Ali Heyderli <ali.heyderli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
pytest = "^6.2.2"
pytest-mock = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
